--- a/day_1_itinerary.html
+++ b/day_1_itinerary.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="flex items-center text-gray-700">
                     <span class="font-bold w-32 text-indigo-600">💰 總交通費用：</span>
-                    <span>約 <strong>¥1440+¥980=¥2420</strong> (神戶→奈良 + 奈良→京都)</span>
+                    <span>約 <strong class="text-red-600 font-extrabold">¥1440+¥980=¥2420</strong> (神戶→奈良 + 奈良→京都)</span>
                 </div>
                 <div class="flex items-center text-gray-700">
                     <span class="font-bold w-32 text-indigo-600">🎯 最終目的地：</span>
