--- a/day_3_itinerary.html
+++ b/day_3_itinerary.html
@@ -87,7 +87,7 @@
                     <span class="font-bold w-32 text-indigo-600">💡 提示：</span>
                     <span>本日以<strong>大量步行</strong>為主，建議使用 IC 卡搭乘公車。</span>
                 </div>
-            </div>
+            </div>           
         </div>
 
         <!-- 區塊二：飯店 → 清水寺周邊：分步導航 (去程) -->
@@ -124,6 +124,11 @@
                     </p>
                 </div>
             </div>
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+             <a href="https://maps.app.goo.gl/1HSJ7TsK59GzG9cB9" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-gray-400 rounded-lg hover:bg-gray-700 transition duration-150 shadow-md mt-4">
+                🗺️ 路線圖
+            </a>
+            </div>             
         </div>
         
         <!-- 區塊三：清水寺東山步行路線 -->
@@ -201,6 +206,11 @@
                     </p>
                 </li>
             </ol>
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+                <a href="https://maps.app.goo.gl/z94Ueib5LThyZ3Q8A" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-yellow-300 rounded-lg hover:bg-yellow-500 transition duration-150 shadow-md mt-4">
+                🗺️ 路線圖
+            </a>
+            </div>
         </div>
 
         <!-- 區塊五：祇園 → 飯店：傍晚回程 -->
@@ -234,7 +244,11 @@
                     <span class="ml-2">從 <strong>九条河原町</strong> 站下車後，步行約 <strong>3-5 分鐘</strong>回 <strong>CHISUN PREMIUM 京都九條</strong> 飯店。</span>
                 </div>
             </div>
-            
+			<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+                <a href="https://maps.app.goo.gl/nWdUaAWAV4thEjE88" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
+                🗺️ 路線圖
+            </a>
+            </div>	            
         </div>
 
         <!-- 區塊六：餐點規劃 (Meals) -->
@@ -251,7 +265,7 @@
                 <span class="font-bold text-blue-700">特色：</span> 位於老町家中的人氣咖啡廳，主打經典日式厚片吐司與虹吸咖啡。<br>
                 <span class="font-bold text-blue-700">位置：</span> 近清水五条站，建議在前往清水寺前先在此用早餐。
             </p>
-            <a href="#" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
+            <a href="https://maps.app.goo.gl/yU9ebDBYrCfJDeuR8" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
                 🗺️ 地圖連結 (待填)
             </a>
 
@@ -263,7 +277,7 @@
                 <span class="font-bold text-blue-700">特色：</span> 祇園/八坂神社周邊的知名老店，招牌是味道濃郁的親子丼。<br>
                 <span class="font-bold text-blue-700">位置：</span> 接近八坂神社與花見小路，適合在午間步行至此。
             </p>
-            <a href="#" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
+            <a href="https://maps.app.goo.gl/YZeukVJNEMNk6uGr7" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
                 🗺️ 地圖連結 (待填)
             </a>
 
@@ -275,19 +289,19 @@
                 <span class="font-bold text-blue-700">特色：</span> 位於二年坂附近，是專門販售傳統甜點（善哉、紅豆湯）的老店，是休憩的好地方。<br>
                 <span class="font-bold text-blue-700">備註：</span> 建議在步行二年坂/三年坂時順路享用。
             </p>
-            <a href="#" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
+            <a href="https://maps.app.goo.gl/cTcWbGu86w7W8iDy5" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
                 🗺️ 地圖連結 (待填)
             </a>
 
             <!-- 晚餐 -->
             <h4 class="text-lg font-bold text-gray-900 mb-2 mt-4 border-b border-lime-200 pb-1">
-                晚餐：推薦選項 (祇園/京都車站)
+                晚餐：Chao Chao Gyoza - Shijo Kawaramachi(浪花ひとくち餃子 餃々 四条河原町店)
             </h4>
             <p class="text-sm text-gray-700 ml-4 space-y-1">
-                <span class="font-bold text-blue-700">建議 A (祇園)：</span> 在祇園周邊選擇傳統的<strong>壽司</strong>或<strong>懷石料理</strong>（需提前預約），氛圍極佳。<br>
-                <span class="font-bold text-blue-700">建議 B (車站)：</span> 回到 <strong>JR 京都車站</strong> 周邊，如伊勢丹百貨內有許多高樓層餐廳，或是選擇車站地下街的連鎖美食。
+                <span class="font-bold text-blue-700">特色：</span> 京都的熱門餃子專賣店，以其酥脆多汁的餃子和多樣化的菜單而聞名，並提供豐富的素食選擇。<br>
+                <span class="font-bold text-blue-700">菜單：</span> 鎮店之寶是「Chao Chao Gyoza」（浪花一口餃子），皮薄酥脆、內餡多汁。
             </p>
-            <a href="#" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
+            <a href="https://maps.app.goo.gl/fiy9wqCc3AriLdAy6" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
                 🗺️ 地圖連結 (待填)
             </a>
         </div>
