--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 *此處將連結至後續規劃的每日行程檔案*
             </p>
             <ul class="space-y-2 text-gray-700 font-medium">
-                <li><a href="day_1_itinerary.html" class="px-3 py-1 text-sm font-semibold rounded-full bg-green-600 text-white shadow-lg transition duration-150">Day 1 (2/4): 抵達神戶與前往奈良觀光</a></li>
+                <li><a href="day_1_itinerary.html" class="px-3 py-1 text-sm font-semibold rounded-full bg-green-600 text-white shadow-lg transition duration-150">Day 1 (2/4)：抵達神戶與前往奈良觀光</a></li>
                 <li><a href="day_2_itinerary.html" class="px-3 py-1 text-sm font-semibold rounded-full bg-green-600 text-white shadow-lg transition duration-150">Day 2 (2/5)：京都嵐山經典一日遊</a></li>
                 <li><a href="day_3_itinerary.html" class="px-3 py-1 text-sm font-semibold rounded-full bg-green-600 text-white shadow-lg transition duration-150">Day 3 (2/6)：清水寺、東山古街與祇園</a></li>
                 <li><a href="day_4_itinerary.html" class="px-3 py-1 text-sm font-semibold rounded-full bg-green-600 text-white shadow-lg transition duration-150">Day 4 (2/7)：天橋立與伊根舟屋</a></li>
