--- a/day_3_itinerary.html
+++ b/day_3_itinerary.html
@@ -118,16 +118,16 @@
                     <p class="text-sm text-gray-600 ml-8">
                         <span class="font-bold text-blue-700">交通：</span> 京都市營公車<br>
                         <span class="font-bold text-blue-700">車種/路線：</span> <strong>207 號</strong> (往祇園/九条車庫方向)<br>
-                        <span class="font-bold text-blue-700">時長：</span> 約 <strong>18-25 分鐘</strong><br>
+                        <span class="font-bold text-blue-700">時長：</span> 約 <strong> 15 分鐘</strong><br>
                         <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">¥230</span><br>
-                        <span class="font-bold text-blue-700">指示：</span> 在 <strong>五条坂</strong> 站下車，下車後步行約 15 分鐘上坡即可抵達清水寺入口。
+                        <span class="font-bold text-blue-700">指示：</span> 在 <strong>馬町</strong> 站下車，下車後步行約 2 分鐘到市川屋珈琲吃早餐
                     </p>
                 </div>
             </div>
             <div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
-             <a href="https://maps.app.goo.gl/1HSJ7TsK59GzG9cB9" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-gray-400 rounded-lg hover:bg-gray-700 transition duration-150 shadow-md mt-4">
-                🗺️ 路線圖
-            </a>
+                <a href="https://maps.app.goo.gl/yqNspUVLiNWGDX859" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-gray-400 rounded-lg hover:bg-gray-700 transition duration-150 shadow-md mt-4">
+                    🗺️ 吃早餐
+                </a>
             </div>             
         </div>
         
@@ -173,7 +173,7 @@
                 </li>
             </ol>
 			<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
-                <a href="https://maps.app.goo.gl/H7m2AXboMsh2htoA8" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
+                <a href="https://maps.app.goo.gl/xrEP8bFaQc9Pahto7" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
                 🗺️ 路線圖
             </a>
             </div>			
@@ -207,7 +207,7 @@
                 </li>
             </ol>
             <div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
-                <a href="https://maps.app.goo.gl/z94Ueib5LThyZ3Q8A" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-yellow-300 rounded-lg hover:bg-yellow-500 transition duration-150 shadow-md mt-4">
+                <a href="https://maps.app.goo.gl/w6hF88DynXwDiK5M8" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-yellow-300 rounded-lg hover:bg-yellow-500 transition duration-150 shadow-md mt-4">
                 🗺️ 路線圖
             </a>
             </div>
@@ -223,12 +223,12 @@
             <div class="space-y-3 text-gray-700">
                 <div class="flex items-start">
                     <span class="font-bold w-16 flex-shrink-0 text-red-600">步驟 1：</span>
-                    <span class="ml-2">從祇園白川/花見小路步行至 <strong>四条京阪前</strong> 公車站。</span>
+                    <span class="ml-2">從祇園白川/花見小路步行至 <strong>晚餐餐廳：浪花ひとくち餃子</strong></span>
                 </div>
                 <div class="flex items-start">
                     <span class="font-bold w-16 flex-shrink-0 text-red-600">步驟 2：</span>
                     <span class="ml-2">
-                        搭乘公車前往飯店附近的公車站。
+                        吃完晚餐後步行至四条河原町公車站。
                         <br>
                         <span class="font-bold text-blue-700">交通：</span> 京都市營公車<br>
                         <span class="font-bold text-blue-700">車種/路線：</span> <strong>207 號</strong> (往九条車庫方向)<br>
@@ -245,7 +245,7 @@
                 </div>
             </div>
 			<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
-                <a href="https://maps.app.goo.gl/nWdUaAWAV4thEjE88" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
+                <a href="https://maps.app.goo.gl/ehjqpzSsEqRUxxT66" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
                 🗺️ 路線圖
             </a>
             </div>	            
