--- a/day_4_itinerary.html
+++ b/day_4_itinerary.html
@@ -89,9 +89,11 @@
                 </div>
             </div>
             <!-- 新增丹後海陸交通公車網站連結按鈕 -->
-            <a href="https://www.tankai.jp/tw/bus/tankai-bus/" target="_blank" class="mt-4 inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md">
-                🚌 丹後海陸交通公車官方網站
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+                <a href="https://www.tankai.jp/tw/bus/tankai-bus/" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-gary-500 bg-purple-300 rounded-lg hover:bg-purple-400 transition duration-150 shadow-md mt-4">
+                    🚌 丹後海陸交通公車官方網站
             </a>
+            </div>
         </div>
 
         <!-- 區塊二：去程：京都 → 天橋立：分步導航 -->
@@ -116,33 +118,23 @@
                 <!-- 步驟 2: Kyoto -> Fukuchiyama Limited Express -->
                 <div class="border-l-4 border-sky-500 pl-4">
                     <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
-                        <span class="bg-sky-500 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">2</span> 🚂 京都 → 福知山 (轉乘)
+                        <span class="bg-sky-500 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">2</span> 🚂 京都 → 天橋立
                     </h4>
                     <p class="text-sm text-gray-600 ml-8">
-                        <span class="font-bold text-blue-700">區間：</span> <strong>京都</strong> 站 → <strong>福知山</strong> 站<br>
+                        <span class="font-bold text-blue-700">區間：</span> <strong>京都</strong> 站 → <strong>天橋立</strong> 站<br>
                         <span class="font-bold text-blue-700">交通：</span> 特急列車 (JR)<br>
-                        <span class="font-bold text-blue-700">車種/路線：</span> <strong>特急 城崎 1 号</strong><br>
-                        <span class="font-bold text-blue-700">時長：</span> 約 <strong>1 小時 15 分鐘</strong><br>
-                        <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">約 ¥3,400</span> (含特急券與基本運費)<br>
-                        <span class="font-bold text-blue-700">時刻：</span> <strong>07:32 發車 → 08:47 抵達</strong>
+                        <span class="font-bold text-blue-700">車種/路線：</span> <strong>特急 喬立 1 号</strong><br>
+                        <span class="font-bold text-blue-700">時長：</span> 約 <strong>2 小時 2 分鐘</strong><br>
+                        <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">約 ¥5,000</span> (含特急券與基本運費)<br>
+                        <span class="font-bold text-blue-700">時刻：</span> <strong>08:38 發車 → 10:40 抵達</strong>
                     </p>
                 </div>
-
-                <!-- 步驟 3: Fukuchiyama -> Amanohashidate (KTR) -->
-                <div class="border-l-4 border-green-500 pl-4">
-                    <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
-                        <span class="bg-green-500 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">3</span> 🌊 福知山 → 天橋立
-                    </h4>
-                    <p class="text-sm text-gray-600 ml-8">
-                        <span class="font-bold text-blue-700">區間：</span> <strong>福知山</strong> 站 → <strong>天橋立</strong> 站<br>
-                        <span class="font-bold text-blue-700">交通：</span> 京都丹後鐵道 (KTR)<br>
-                        <span class="font-bold text-blue-700">車種/路線：</span> <strong>丹後接力 1 号</strong> (普通列車或觀光列車)<br>
-                        <span class="font-bold text-blue-700">時長：</span> 約 <strong>38 分鐘</strong><br>
-                        <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">約 ¥1,420</span> (若為觀光列車可能需額外費用)<br>
-                        <span class="font-bold text-blue-700">時刻：</span> <strong>08:55 發車 → 09:33 抵達</strong> (僅 8 分鐘轉乘時間，請注意!)
-                    </p>
-                </div>
-            </div>
+            	<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+                <a href="https://maps.app.goo.gl/3q5oVoDVKEHVoGK3A" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-gray-400 rounded-lg hover:bg-gray-700 transition duration-150 shadow-md mt-4">
+                    🗺️ 乘車路線圖
+                </a>
+            	</div> 				
+          </div>
         </div>
         
         <!-- 區塊三：天橋立觀光行程 (景點資訊) -->
@@ -151,47 +143,42 @@
                 <span class="mr-2">⛩️</span> 天橋立觀光行程
             </h3>
             
-            <p class="text-sm text-gray-600 font-bold mb-4">
-                抵達天橋立站後，建議先前往傘松公園觀景，再返回碼頭搭船。
-            </p>
+          <p class="text-sm text-gray-600 font-bold mb-4">
+              抵達天橋立站後，建議沙洲步行後前往傘松公園觀景，再返回搭公車至伊根舟屋。
+          </p>
 
             <!-- 景點列表 -->
             <ol class="space-y-4 text-gray-800 list-decimal list-inside pl-4">
                 <li>
-                    <span class="font-bold text-pink-600">智恩寺 文殊堂 & 天橋立沙洲 (南側)</span>
+                    <span class="font-bold text-pink-600">智恩寺文殊堂 &amp; 天橋立沙洲 (南側)</span>
                     <p class="text-sm text-gray-600 ml-5">
                         <span class="font-bold text-pink-700">預計停留：</span><strong>0.5 小時</strong><br>
                         <span class="font-bold text-pink-700">特色：</span>出站後步行可達，智恩寺是著名的求智慧寺廟。
                     </p>
                 </li>
                 <li>
-                    <span class="font-bold text-pink-600">天橋立棧橋 (搭船) → 一之宮棧橋</span>
+                    <span class="font-bold text-pink-600">觀光船：天橋立 → 一之宮棧橋</span>
                     <p class="text-sm text-gray-600 ml-5">
                         <span class="font-bold text-pink-700">交通：</span> 觀光船<br>
-                        <span class="font-bold text-pink-700">時長：</span> 約 <strong>12 分鐘</strong><br>
-                        <span class="font-bold text-pink-700">備註：</span> 建議搭船過海灣，可節省體力。
+                        <span class="font-bold text-pink-700">時長：</span> 約 <strong>15分鐘
+                        </strong><br>
+                        <span class="font-bold text-pink-700">備註：</span> 觀光船只要短短15分鐘就能用一半的時間快速抵達目的地，還可從海上遠望天橋立的絕美景色。
                     </p>
                 </li>
                 <li>
                     <span class="font-bold text-pink-600">傘松公園 (Kasamatsu Park)</span>
                     <p class="text-sm text-gray-600 ml-5">
                         <span class="font-bold text-pink-700">交通：</span> 纜車或吊椅<br>
-                        <span class="font-bold text-pink-700">預計停留：</span><strong>1.5 小時</strong><br>
+                        <span class="font-bold text-pink-700">預計停留：</span><strong>1 小時</strong><br>
                         <span class="font-bold text-pink-700">必看：</span> 天橋立北側展望台，著名的「胯下觀景」必試。
                     </p>
                 </li>
                 <li>
                     <span class="font-bold text-pink-600">伊根舟屋群 (Ine Funaya)</span>
                     <p class="text-sm text-gray-600 ml-5">
-                        <span class="font-bold text-pink-700">交通：</span> 丹後海陸交通公車<br>
-                        <span class="font-bold text-pink-700">時長：</span> 約 <strong>1 小時</strong> (單程公車)<br>
+                        <span class="font-bold text-pink-700">交通：</span> 丹後海陸交通公車，<strong>天橋立纜車下(傘松公園)</strong>→<strong>伊根</strong><br>
+<span class="font-bold text-pink-700">時長：</span> 約 <strong>1 小時</strong> (單程公車)<br>
                         <span class="font-bold text-pink-700">備註：</span> 於<strong>傘松公園</strong>下山後，在纜車下方的公車站搭乘公車前往**伊根**，務必注意公車班次（冬季班次較少）。
-                    </p>
-                </li>
-                <li>
-                    <span class="font-bold text-pink-600">丹後觀光鐵道 (彈性行程)</span>
-                    <p class="text-sm text-gray-600 ml-5">
-                        <span class="font-bold text-pink-700">備註：</span> 若時間允許，可選擇搭乘觀光列車如「青松號」或「赤松號」，體驗沿海風光（需事先查閱時刻表及預約）。
                     </p>
                 </li>
             </ol>
@@ -208,12 +195,13 @@
                 <div class="flex items-start">
                     <span class="font-bold w-16 flex-shrink-0 text-red-600">步驟 1：</span>
                     <span class="ml-2">
-                        從<strong>伊根</strong>搭乘**丹後海陸交通公車**回到 <strong>天橋立站</strong>。
+                        從<strong>伊根</strong>搭乘<strong>丹後海陸交通公車</strong>回到 <strong>天橋立站</strong>。
                         <br>
                         <span class="font-bold text-blue-700">交通：</span> 丹後海陸交通公車
                         <br>
                         <span class="font-bold text-blue-700">時長：</span> 約 <strong>1 小時</strong> (請務必預留公車等待時間)
-                    </span>
+						<br>
+					<span class="font-bold text-red-700">注意：</span> 要搭乘<strong class="font-bold text-red-700"> 15：08伊根站開 </strong>往天橋立(<strong class="font-bold text-red-700">最晚16:20</strong>)，來不及的話直接搭計程車。</span>
                 </div>
                 <div class="flex items-start">
                     <span class="font-bold w-16 flex-shrink-0 text-red-600">步驟 2：</span>
@@ -222,12 +210,12 @@
                         <br>
                         <span class="font-bold text-blue-700">區間：</span> <strong>天橋立</strong> 站 → <strong>京都</strong> 站
                         <br>
-                        <span class="font-bold text-blue-700">車種/路線：</span> <strong>特急 橋立 8 号</strong> (直達)<br>
+                        <span class="font-bold text-blue-700">車種/路線：</span> <strong>特急 橋立 8 号或 10 号</strong> (直達)<br>
                         <span class="font-bold text-blue-700">時長：</span> 約 <strong>2 小時 12 分鐘</strong>
                         <br>
-                        <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">約 ¥4,000+</span> (依據座位等級)
+                        <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">約 ¥5,000</span>
                         <br>
-                        <span class="font-bold text-blue-700">時刻：</span> <strong>18:09 發車 → 20:21 抵達</strong>
+                        <span class="font-bold text-blue-700">時刻：</span> <strong>18:09 or 19:05 發車 → 20:21 or 21:19 抵達</strong>
                     </span>
                 </div>
                 <div class="flex items-start">
