--- a/day_1_itinerary.html
+++ b/day_1_itinerary.html
@@ -138,7 +138,7 @@
                     </p>
                 </div>
             </div>
-            <div class="flex space-x-2 px-4 whitespace-nowrap justify-center"><a href="https://maps.app.goo.gl/zATpNgRSXvVv14Xq8" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-blue-400 rounded-lg hover:bg-blue-700 transition duration-150 shadow-md mt-4">
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end"><a href="https://maps.app.goo.gl/zATpNgRSXvVv14Xq8" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-blue-400 rounded-lg hover:bg-blue-700 transition duration-150 shadow-md mt-4">
                 🗺️ 路線圖
             </a>
             </div>
