--- a/day_3_itinerary.html
+++ b/day_3_itinerary.html
@@ -265,9 +265,10 @@
                 <span class="font-bold text-blue-700">特色：</span> 位於老町家中的人氣咖啡廳，主打經典日式厚片吐司與虹吸咖啡。<br>
                 <span class="font-bold text-blue-700">位置：</span> 近清水五条站，建議在前往清水寺前先在此用早餐。
             </p>
-            <a href="https://maps.app.goo.gl/yU9ebDBYrCfJDeuR8" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
-                🗺️ 地圖連結 (待填)
-            </a>
+
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end"><a href="https://maps.app.goo.gl/yU9ebDBYrCfJDeuR8" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
+                🗺️ 地圖連結
+            </a></div>			
 
             <!-- 午餐 -->
             <h4 class="text-lg font-bold text-gray-900 mb-2 mt-4 border-b border-lime-200 pb-1">
@@ -277,10 +278,9 @@
                 <span class="font-bold text-blue-700">特色：</span> 祇園/八坂神社周邊的知名老店，招牌是味道濃郁的親子丼。<br>
                 <span class="font-bold text-blue-700">位置：</span> 接近八坂神社與花見小路，適合在午間步行至此。
             </p>
-            <a href="https://maps.app.goo.gl/YZeukVJNEMNk6uGr7" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
-                🗺️ 地圖連結 (待填)
-            </a>
-
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end"><a href="https://maps.app.goo.gl/YZeukVJNEMNk6uGr7" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
+                🗺️ 地圖連結
+            </a></div>
             <!-- 點心 -->
             <h4 class="text-lg font-bold text-gray-900 mb-2 mt-4 border-b border-lime-200 pb-1">
                 點心：日式甜點店「かさぎ屋」 (Kasagiya)
@@ -289,10 +289,10 @@
                 <span class="font-bold text-blue-700">特色：</span> 位於二年坂附近，是專門販售傳統甜點（善哉、紅豆湯）的老店，是休憩的好地方。<br>
                 <span class="font-bold text-blue-700">備註：</span> 建議在步行二年坂/三年坂時順路享用。
             </p>
-            <a href="https://maps.app.goo.gl/cTcWbGu86w7W8iDy5" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
-                🗺️ 地圖連結 (待填)
-            </a>
 
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end"><a href="https://maps.app.goo.gl/cTcWbGu86w7W8iDy5" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
+                🗺️ 地圖連結
+            </a></div>
             <!-- 晚餐 -->
             <h4 class="text-lg font-bold text-gray-900 mb-2 mt-4 border-b border-lime-200 pb-1">
                 晚餐：Chao Chao Gyoza - Shijo Kawaramachi(浪花ひとくち餃子 餃々 四条河原町店)
@@ -301,9 +301,9 @@
                 <span class="font-bold text-blue-700">特色：</span> 京都的熱門餃子專賣店，以其酥脆多汁的餃子和多樣化的菜單而聞名，並提供豐富的素食選擇。<br>
                 <span class="font-bold text-blue-700">菜單：</span> 鎮店之寶是「Chao Chao Gyoza」（浪花一口餃子），皮薄酥脆、內餡多汁。
             </p>
-            <a href="https://maps.app.goo.gl/fiy9wqCc3AriLdAy6" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
-                🗺️ 地圖連結 (待填)
-            </a>
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end"><a href="https://maps.app.goo.gl/fiy9wqCc3AriLdAy6" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
+                🗺️ 地圖連結
+            </a></div>			
         </div>
     </div>
 </body>
