--- a/day_4_itinerary.html
+++ b/day_4_itinerary.html
@@ -182,6 +182,11 @@
                     </p>
                 </li>
             </ol>
+			<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+                <a href="https://maps.app.goo.gl/RCQi46JHQ98Garf26" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
+                🗺️ 路線圖(伊根特急バス)
+            </a>
+            </div>
         </div>
 
         <!-- 區塊四：回程：天橋立 → 京都：火車時刻 -->
@@ -223,6 +228,11 @@
                     <span class="ml-2">抵達京都車站後，步行回 <strong>CHISUN PREMIUM 京都九條</strong> 飯店。</span>
                 </div>
             </div>
+			<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+                <a href="https://maps.app.goo.gl/puSEvJEHYWm1uMn49" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
+                🗺️ 路線圖(伊根特急バス)
+            </a>
+            </div>			
             
         </div>
 
@@ -240,9 +250,9 @@
                 <span class="font-bold text-blue-700">特色：</span> 天橋立地區知名烏龍麵店，主打手工烏龍麵與日式料理。<br>
                 <span class="font-bold text-blue-700">備註：</span> 建議在上午景點結束後，步行前往用餐。
             </p>
-            <a href="#" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
-                🗺️ 地圖連結 (待填)
-            </a>
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end"><a href="https://maps.app.goo.gl/fupaqhDGCp3dAN3T9" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
+                🗺️ 地圖連結
+            </a></div>
 
             <!-- 點心/輕食 -->
             <h4 class="text-lg font-bold text-gray-900 mb-2 mt-4 border-b border-lime-200 pb-1">
@@ -252,21 +262,21 @@
                 <span class="font-bold text-blue-700">特色：</span> 位於天橋立沙洲中間處，提供輕食、甜點與咖啡，是休息的好地方。<br>
                 <span class="font-bold text-blue-700">地點：</span> 位於天橋立沙洲上，適合騎自行車或步行穿越時休憩。
             </p>
-            <a href="#" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
-                🗺️ 地圖連結 (待填)
-            </a>
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end"><a href="https://maps.app.goo.gl/nyXw5hrqBCoW3Qsp6" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
+                🗺️ 地圖連結
+            </a></div>
 
             <!-- 晚餐 -->
             <h4 class="text-lg font-bold text-gray-900 mb-2 mt-4 border-b border-lime-200 pb-1">
-                晚餐 (18:00前)：宮魚魚水產 (TOTOMART)
+                晚餐 (18:00前)：小田寿司(Oda Sushi)
             </h4>
             <p class="text-sm text-gray-700 ml-4 space-y-1">
-                <span class="font-bold text-blue-700">建議：</span> 位於天橋立站附近，提供新鮮海產的販賣與用餐區，可在此享用新鮮海鮮。<br>
-                <span class="font-bold text-blue-700">備註：</span> 由於需趕 18:09 的火車，請務必在 17:00-17:30 之間開始用餐。
+                <span class="font-bold text-blue-700">建議：</span> 一家是日本天橋立的「小田壽司」，是間經營40年的在地壽司店，以新鮮的海鮮和壽司便當聞名<br>
+                <span class="font-bold text-blue-700">備註：</span> 使用當地新鮮海鮮，如甘蝦、鱧魚、丹後鯛魚等，提供從平價壽司到無菜單的 Omakase (主廚推薦) 等不同價位選擇。
             </p>
-            <a href="#" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
-                🗺️ 地圖連結 (待填)
-            </a>
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end"><a href="https://maps.app.goo.gl/SKk29sy3qnh4ABkHA" target="_blank" class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
+                🗺️ 地圖連結
+            </a></div>
         </div>
     </div>
 </body>
