--- a/day_3_itinerary.html
+++ b/day_3_itinerary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 3 行程規劃 (2/6)</title>
+    <title>Day 3 (2/6)：清水寺、東山古街與祇園</title>
     <!-- 載入 Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
