--- a/day_8_itinerary.html
+++ b/day_8_itinerary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 8 行程規劃 (2/11)</title>
+    <title>Day 8 (2/11)：飯店 → 關西機場 (KIX)</title>
     <!-- 載入 Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
