--- a/day_1_itinerary.html
+++ b/day_1_itinerary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 1 行程規劃 (2/4)</title>
+    <title>Day 1 (2/4)：神戶 → 奈良 → 京都</title>
     <!-- 載入 Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
