--- a/day_2_itinerary.html
+++ b/day_2_itinerary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 2 行程規劃 (2/5)</title>
+    <title>Day 2 (2/5)：京都嵐山經典一日遊</title>
     <!-- 載入 Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
