--- a/day_5_itinerary.html
+++ b/day_5_itinerary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 5 行程規劃 (2/8)</title>
+    <title>Day 5 (2/8)：伏見稻荷與東福寺</title>
     <!-- 載入 Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
